assets/styles/index.scss
$theme-colors: (
  "primary": #13dcc8,
  "secondary": #abe798,
);

@import "~bootstrap/scss/bootstrap";

body {
  background: url("public/blackboard-texture_1205-375.jpg");
  // background-repeat: no-repeat;
  background-size: cover;
  margin-top: 4rem;
  margin-left: auto;
  margin-right: auto;
  font-family: Tahoma;
  // text-align: center;
  // background: black;
  // color: white;
  max-width: 100vw;
  color: white;
}

p {
  margin: 0;
}

.form-control {
  margin: 0;
  // padding:0;
}
.col-6 {
  padding: 0;
}

#goals {
  // color: red;
}

#steps-list {
  // color: blue;
  margin-left: 50px;
}

#checkbox {
  position: relative;
  margin-right: 0px;
}

// .border {
//   border-radius: 50px;
//   padding: 25px;
//   margin: 25px;
// }

// #banner {
//   color: #ffec64;
// }

// .button {
//   box-shadow: inset 0px 1px 0px 0px #ffffff;
//   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
//   background-color: #ededed;
//   border-radius: 6px;
//   border: 1px solid #dcdcdc;
//   display: inline-block;
//   cursor: pointer;
//   color: #777777;
//   font-family: Arial;
//   font-size: 15px;
//   font-weight: bold;
//   padding: 6px 24px;
//   text-decoration: none;
//   text-shadow: 0px 1px 0px #ffffff;
// }
// .button:hover {
//   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
//   background-color: #dfdfdf;
// }
// .button:active {
//   position: relative;
//   top: 1px;
// }

